--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,15 @@
-#root {
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: "Manrope", sans-serif;
+}
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +50,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
