--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,4 +31,17 @@ body{
     z-index: 100;
     background: #00000084;
   }
+
+  .menu{
+    width: 15rem;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #fff;
+    z-index: 200;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
