--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,7 +21,7 @@ body{
   box-shadow: 3px 3px -8px 3px #ddd;
 }
 
-@media only screen and (max-width:1024px){
+@media only screen and (max-width:768px){
   .navigation{
     width: 100px;
     height: 100px;
@@ -30,6 +30,7 @@ body{
     left: 0;
     z-index: 100;
     background: #00000084;
+    display: none;
   }
 
   .menu{
@@ -43,5 +44,10 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    line-height: 30px;
+  }
+
+  .show_menu{
+    display: block;
   }
 }
