--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,7 +22,7 @@ body{
 }
 
 @media only screen and (max-width:768px){
-  .navigation{
+  .header .navigation{
     width: 100px;
     height: 100px;
     position: fixed;
@@ -33,7 +33,7 @@ body{
     display: none;
   }
 
-  .menu{
+  .header .navigation.menu{
     width: 15rem;
     height: 100px;
     position: absolute;
@@ -47,7 +47,7 @@ body{
     line-height: 30px;
   }
 
-  .show_menu{
+  .header .navigation.show__menu{
     display: block;
   }
 }
