Add border to swiper pagination bullets in App.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@ body{
 .swiper-pagination-bullet{
   width: 12px !important;
   height: 12px !important;
+  border: 1px solid #181a1e !important;
 }
 
 .sticky__header{
