--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@ body{
   height: 12px !important;
   border: 1px solid #181a1e !important;
   opacity: 100% !important;
+  background: #fff !important;
 }
 
 .sticky__header{
