--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,10 @@ body{
   background: #fff !important;
 }
 
+.swiper-pagination-bullet-active{
+  
+}
+
 .sticky__header{
   width:100px;
   height:80px;
