Add empty style for next swiper slide in App.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,10 @@ body{
   padding-bottom: 70px !important;
 }
 
+.swiper-slide.swiper-slide-next{
+  
+}
+
 .sticky__header{
   width:100px;
   height:80px;
