--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,7 @@ body{
 .swiper-slide.swiper-slide-next{
   background: #0067ff;
   border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
 }
 
 .sticky__header{
