--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,7 +33,7 @@ body{
   box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
 }
 
-.swiper-slide.swiper-slide-next h4, .swiper-slide.swiper-slide-next{
+.swiper-slide.swiper-slide-next h4, .swiper-slide.swiper-slide-next p{
   color: #fff !important;
 }
 
