--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,10 @@
     .form__label{
         @apply text-textColor font-semibold text-[16px] mb-2;
     }
+
+    .form__input{
+        @apply w-full px-4 py-3 border border-solid border-[#0066ff61] focus:outline-none focus:border-primaryColor text-[16px] leading-7 text-headingColor placeholder:text-textColor cursor-pointer;
+    }
 }
 
 @media only screen and (max-width: 1024px){
